--- a/requirements.txt
+++ b/requirements.txt
@@ -1,141 +1,16 @@
-accelerate==1.10.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-alembic==1.16.5
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.10.0
-asteroid-filterbanks==0.4.0
-attrs==25.3.0
-av==15.1.0
-certifi==2025.8.3
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.2.1
-coloredlogs==15.0.1
-colorlog==6.9.0
-contourpy==1.3.3
+
 ctranslate2==4.4.0
-cycler==0.12.1
-docopt==0.6.2
-dotenv==0.9.9
-einops==0.8.1
 fastapi==0.116.2
-faster-whisper==1.2.0
-filelock==3.19.1
-flatbuffers==25.2.10
-fonttools==4.59.2
-frozenlist==1.7.0
-fsspec==2025.9.0
-greenlet==3.2.4
-h11==0.16.0
-hf-xet==1.1.10
-huggingface-hub==0.35.0
-humanfriendly==10.0
-HyperPyYAML==1.2.2
-idna==3.10
-Jinja2==3.1.6
-joblib==1.5.2
-julius==0.2.7
-kiwisolver==1.4.9
-lightning==2.5.5
-lightning-utilities==0.15.2
-llvmlite==0.44.0
-Mako==1.3.10
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.6
-mdurl==0.1.2
-more-itertools==10.8.0
-mpmath==1.3.0
-multidict==6.6.4
-networkx==3.5
-nltk==3.9.1
-numba==0.61.2
-numpy==2.2.6
-nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu12==12.8.90
-nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.3
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvtx-cu12==12.8.90
-omegaconf==2.3.0
-onnxruntime==1.22.1
-openai-whisper==20250625
-optuna==4.5.0
-packaging==25.0
+huggingface_hub==0.35.0
+openai_whisper==20250625
 pandas==2.3.2
-pillow==11.3.0
-primePy==1.3
-propcache==0.3.2
-protobuf==6.32.1
-psutil==7.0.0
-pyannote.audio==3.4.0
 pyannote.core==5.0.0
 pyannote.database==5.1.3
 pyannote.metrics==3.2.1
 pyannote.pipeline==3.0.1
-pycparser==2.23
+pyannote_audio==3.4.0
 pydantic==2.11.9
-pydantic_core==2.33.2
-Pygments==2.19.2
-pyparsing==3.2.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytorch-lightning==2.5.5
-pytorch-metric-learning==2.9.0
-pytz==2025.2
-PyYAML==6.0.2
-regex==2025.9.1
-requests==2.32.5
-rich==14.1.0
-ruamel.yaml==0.18.15
-ruamel.yaml.clib==0.2.12
-safetensors==0.6.2
-scikit-learn==1.7.2
-scipy==1.16.2
-semver==3.0.4
-sentencepiece==0.2.1
-setuptools==80.9.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soundfile==0.13.1
-speechbrain==1.0.3
-SQLAlchemy==2.0.43
-starlette==0.48.0
-sympy==1.14.0
-tabulate==0.9.0
-tensorboardX==2.6.4
-threadpoolctl==3.6.0
-tiktoken==0.11.0
-tokenizers==0.19.1
-torch==2.8.0
-torch-audiomentations==0.12.0
-torch_pitch_shift==1.2.5
-torchaudio==2.8.0
-torchmetrics==1.8.2
-torchvision==0.20.1+cu121
-tqdm==4.67.1
-transformers==4.40.2
-transformers-stream-generator==0.0.5
-triton==3.4.0
-typer==0.17.4
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.35.0
+Requests==2.32.5
+torch==2.5.1+cu121
+transformers==4.56.1
 whisperx==3.4.2
-yarl==1.20.1
