--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
+--extra-index-url https://download.pytorch.org/whl/cu121
 
-ctranslate2==4.4.0
 fastapi==0.116.2
 huggingface_hub==0.35.0
-openai_whisper==20250625
-pandas==2.3.2
-pyannote.core==5.0.0
-pyannote.database==5.1.3
-pyannote.metrics==3.2.1
-pyannote.pipeline==3.0.1
-pyannote_audio==3.4.0
+openai-whisper==20250625
 pydantic==2.11.9
-Requests==2.32.5
-torch==2.5.1+cu121
+requests==2.32.5
 transformers==4.56.1
 whisperx==3.4.2
+whisper==1.1.10
+uvicorn==0.35.0
+python-dotenv==1.0.1
+accelerate==0.28.0
+python-multipart==0.0.6
+einops==0.6.1
+transformers_stream_generator==0.1.5
+
+torch==2.5.1+cu121
+torchvision==0.20.1+cu121
+torchaudio==2.5.1+cu121
